[gd_scene load_steps=13 format=3 uid="uid://bcq7e3blc2k2q"]

[ext_resource type="Script" uid="uid://omtdknm2o1om" path="res://Scenes/ending.gd" id="1_5jm55"]
[ext_resource type="PackedScene" uid="uid://byklja0xvswjw" path="res://Scenes/Instances/player.tscn" id="2_6u0w7"]
[ext_resource type="PackedScene" uid="uid://xfc33l6y6gxx" path="res://Scenes/Instances/camera_2d.tscn" id="3_bxiex"]
[ext_resource type="FontFile" uid="uid://d4cqk1e4cnqho" path="res://Fonts/KGLoveMolly.ttf" id="4_bxiex"]
[ext_resource type="AudioStream" uid="uid://df3lxijblfa6s" path="res://Sounds/Terraria Calamity Mod Music - _void_ - Theme of The Lower Abyss [6-kqGESk64w].mp3" id="5_ib4ol"]

[sub_resource type="Gradient" id="Gradient_alxvg"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.056871474, 0.08733296, 0.123973675, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6u0w7"]
gradient = SubResource("Gradient_alxvg")

[sub_resource type="Gradient" id="Gradient_ib4ol"]
colors = PackedColorArray(1, 1, 1, 0.2509804, 1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bfdlc"]
font = ExtResource("4_bxiex")
font_size = 36
font_color = Color(0.2, 0.8235294, 0.9490196, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8w7g3"]
font = ExtResource("4_bxiex")
font_size = 36

[sub_resource type="Gradient" id="Gradient_hw3f7"]
offsets = PackedFloat32Array(0.013333334, 0.093333334)
colors = PackedColorArray(0.10970283, 0.14361906, 0.25937548, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bxiex"]
gradient = SubResource("Gradient_hw3f7")

[node name="Ending" type="Node2D"]
script = ExtResource("1_5jm55")
player = ExtResource("2_6u0w7")
camera = ExtResource("3_bxiex")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(104.386955, -95.67205)
texture = SubResource("GradientTexture2D_6u0w7")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(565, 1324)
amount = 18865
lifetime = 600.0
randomness = 0.73
emission_shape = 3
emission_rect_extents = Vector2(1000, 100)
gravity = Vector2(0, -980)
scale_amount_min = 5.0
scale_amount_max = 20.0
color_initial_ramp = SubResource("Gradient_ib4ol")
hue_variation_min = -0.7
hue_variation_max = 1.0

[node name="Mind" type="CPUParticles2D" parent="."]
position = Vector2(600, 34)
amount = 1000
lifetime = 0.31
emission_shape = 1
emission_sphere_radius = 73.58
gravity = Vector2(0, -180)
angle_max = 180.0
scale_amount_min = 3.0
scale_amount_max = 15.0
color = Color(0.2, 0.8235294, 0.9490196, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control3" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_left = 56.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="Control/Control3"]
layout_mode = 0
offset_left = 412.0
offset_top = 139.0
offset_right = 625.0
offset_bottom = 177.0
text = "Bom trabalho, "
label_settings = SubResource("LabelSettings_bfdlc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/Control3"]
layout_mode = 0
offset_left = 617.0
offset_top = 140.0
offset_right = 663.0
offset_bottom = 178.0
text = "Ego"
label_settings = SubResource("LabelSettings_8w7g3")

[node name="Label2" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 243.0
offset_top = 139.0
offset_right = 957.0
offset_bottom = 194.0
text = "Sua missão aqui está completa"
label_settings = SubResource("LabelSettings_bfdlc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 294.0
offset_top = 138.0
offset_right = 917.0
offset_bottom = 193.0
text = "Agora, retorne à Subconsciência"
label_settings = SubResource("LabelSettings_bfdlc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 285.0
offset_top = 139.0
offset_right = 908.0
offset_bottom = 194.0
text = "Nos veremos em breve"
label_settings = SubResource("LabelSettings_bfdlc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ground2" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(789.99994, 7286)
rotation = 1.5707964
scale = Vector2(189.30667, -78.333336)

[node name="Sprite2D" type="Sprite2D" parent="Ground2"]
z_index = 2
texture = SubResource("GradientTexture2D_bxiex")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ib4ol")
